pc_extract() section argument is not case sensitive anymore

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ importFrom(data.tree,FindNode)
 importFrom(data.tree,as.Node)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,left_join)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
