build_aw_idx to tempdir(), remove aw_idx from package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,6 @@ S3method(smiles,pc_prop)
 S3method(smiles,wd_ident)
 export(as.cas)
 export(aw_query)
-export(build_aw_idx)
 export(cas)
 export(chebi_comp_entity)
 export(ci_query)
@@ -84,6 +83,7 @@ import(rvest)
 import(stringr)
 import(xml2)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,left_join)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
