Update cs_control to query all ChemSpider data sources by default

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ import(rvest)
 import(stringr)
 import(xml2)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,left_join)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
