--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(pp_query)
 export(ppdb)
 export(ppdb_parse)
 export(ppdb_query)
+export(smarts_viewer)
 export(smiles)
 export(srs_query)
 export(wd_ident)
