--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,8 +84,8 @@ import(rvest)
 import(stringr)
 import(xml2)
 importFrom(dplyr,bind_rows)
-importFrom(dplyr,select)
 importFrom(dplyr,left_join)
+importFrom(dplyr,select)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
@@ -95,11 +95,13 @@ importFrom(jsonlite,toJSON)
 importFrom(methods,is)
 importFrom(purrr,map)
 importFrom(purrr,map2)
+importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(rvest,html_table)
 importFrom(stats,rgamma)
 importFrom(stats,setNames)
 importFrom(tibble,enframe)
+importFrom(tidyr,unnest)
 importFrom(utils,URLdecode)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
