--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ S3method(smiles,pc_prop)
 S3method(smiles,wd_ident)
 export(as.cas)
 export(aw_query)
+export(build_aw_idx)
 export(cas)
 export(chebi_comp_entity)
 export(ci_query)
