--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(opsin_query)
 export(pan_query)
 export(parse_mol)
 export(pc_prop)
+export(pc_pugrest)
 export(pc_synonyms)
 export(ping_cs)
 export(ping_pan)
