Remove pc_pugrest, pc_validate, add get_sid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,7 +65,6 @@ export(opsin_query)
 export(pan_query)
 export(parse_mol)
 export(pc_prop)
-export(pc_pugrest)
 export(pc_synonyms)
 export(ping_cs)
 export(ping_pan)
@@ -90,6 +89,7 @@ importFrom(dplyr,left_join)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
+importFrom(httr,content)
 importFrom(httr,http_status)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
