--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,13 +64,13 @@ export(nist_ri)
 export(opsin_query)
 export(pan_query)
 export(parse_mol)
-export(pc_extract)
-export(pc_page)
 export(pc_prop)
+export(pc_sect)
 export(pc_synonyms)
 export(ping_cs)
 export(ping_pan)
 export(ping_pubchem)
+export(ping_pubchem_pw)
 export(pp_query)
 export(ppdb)
 export(ppdb_parse)
@@ -86,15 +86,16 @@ import(polite)
 import(rvest)
 import(stringr)
 import(xml2)
+importFrom(data.tree,Do)
 importFrom(data.tree,FindNode)
 importFrom(data.tree,as.Node)
-importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,left_join)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
 importFrom(httr,http_status)
+importFrom(httr,message_for_status)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(methods,is)
