Export get_sid() and fix some tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(get_chebiid)
 export(get_cid)
 export(get_csid)
 export(get_etoxid)
+export(get_sid)
 export(get_wdid)
 export(inchikey)
 export(is.cas)
