--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache: packages
 env:
   global:
     - _R_CRAN_CHECK_INCOMING_=false
-r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
+r_check_args: "--no-build-vignettes --no-manual --timings --as-cran --no-examples"
 r_check_revdep: false
 warnings_are_errors: false
 
