--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   global:
     - _R_CRAN_CHECK_INCOMING_=false
     - NOT_CRAN=true
-r_check_args: "--no-build-vignettes --no-manual --timings --as-cran"
+r_check_args: "--no-build-vignettes --no-manual --timings --as-cran --no-examples"
 r_check_revdep: false
 warnings_are_errors: false
 
@@ -37,7 +37,7 @@ after_success:
 notifications:
   email:
     recipients:
-    - stirling.tamas@gmail.com
+    - scottericr@gmail.com
     on_success: change
     on_failure: change
 
