--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,12 @@
+platform: x64
+
 environment:
-    R_ARCH: x64
-    R_BUILD_ARGS: --no-manual
-    R_CHECK_ARGS: --no-build-vignettes --no-manual --timings --as-cran --no-multiarch --no-examples
-    R_INSTALL_ARGS: --no-multiarch
-    PKGTYPE: binary
-    global:
-      NOT_CRAN: true
+  R_ARCH: x64
+  R_BUILD_ARGS: --no-manual
+  R_CHECK_ARGS: --no-build-vignettes --no-manual --timings --as-cran --no-multiarch --no-examples
+  R_INSTALL_ARGS: --no-multiarch
+  PKGTYPE: binary
+  NOT_CRAN: true
 
 init:
   ps: |
