push logs as artifact upon failure

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,9 +18,9 @@ install:
   ps: Bootstrap
 
 build_script:
-  - set JAVA_HOME=C:\Program Files (x86)\Java\jdk1.8.0\jre
-  - set PATH=C:\Program Files (x86)\Java\jdk1.8.0\bin;C:\Program Files (x86)\Java\jdk1.8.0\jre\bin\server;%PATH%
-  - ls "C:\Program Files (x86)\Java\jdk1.8.0\jre"
+#  - set JAVA_HOME=C:\Program Files (x86)\Java\jdk1.8.0\jre
+#  - set PATH=C:\Program Files (x86)\Java\jdk1.8.0\bin;C:\Program Files (x86)\Java\jdk1.8.0\jre\bin\server;%PATH%
+#  - ls "C:\Program Files (x86)\Java\jdk1.8.0\jre"
   - travis-tool.sh install_deps
 
 test_script:
@@ -28,6 +28,8 @@ test_script:
 
 on_failure:
   - travis-tool.sh dump_logs
+  - 7z a failure.zip *.Rcheck\*
+  - appveyor PushArtifact failure.zip
 
 notifications:
   - provider: Email
