--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ after_success:
 notifications:
   email:
     recipients:
-    - scottericr@gmail.com
+    - stirling.tamas@gmail.com
     on_success: change
     on_failure: change
 
