--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ export(ppdb_query)
 export(smiles)
 export(srs_query)
 export(wd_ident)
+export(webtest_query)
 import(RCurl)
 import(dplyr)
 import(httr)
