Finalise cs_img() before PR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(cs_control)
 export(cs_convert)
 export(cs_datasources)
 export(cs_extcompinfo)
+export(cs_img)
 export(cs_prop)
 export(cts_compinfo)
 export(cts_convert)
@@ -85,6 +86,7 @@ import(jsonlite)
 import(rvest)
 import(stringr)
 import(xml2)
+importFrom(base64enc,base64decode)
 importFrom(data.tree,Do)
 importFrom(data.tree,FindNode)
 importFrom(data.tree,as.Node)
@@ -93,7 +95,9 @@ importFrom(dplyr,left_join)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
+importFrom(httr,content)
 importFrom(httr,http_status)
+importFrom(httr,message_for_status)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(methods,is)
@@ -107,6 +111,7 @@ importFrom(stats,rgamma)
 importFrom(stats,setNames)
 importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
+importFrom(tibble,tibble)
 importFrom(utils,URLdecode)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
