changed tests to use new ping_service() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,20 +67,7 @@ export(parse_mol)
 export(pc_prop)
 export(pc_sect)
 export(pc_synonyms)
-export(ping_aw)
-export(ping_chebi)
-export(ping_ci)
-export(ping_cir)
-export(ping_cs)
-export(ping_cts)
-export(ping_etox)
-export(ping_fn)
-export(ping_nist)
-export(ping_opsin)
-export(ping_pan)
-export(ping_pubchem)
-export(ping_pubchem_pw)
-export(ping_wd)
+export(ping_service)
 export(pp_query)
 export(ppdb)
 export(ppdb_parse)
