fixing bugs related to NAs.  May have fixed some other bugs by accident.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,12 +81,15 @@ import(httr)
 import(jsonlite)
 import(rvest)
 import(stringr)
+import(tibble)
 import(xml2)
 importFrom(data.tree,Do)
 importFrom(data.tree,FindNode)
 importFrom(data.tree,as.Node)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,everything)
 importFrom(dplyr,left_join)
+importFrom(dplyr,select)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,add_headers)
@@ -104,6 +107,7 @@ importFrom(stats,rgamma)
 importFrom(stats,setNames)
 importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
+importFrom(tibble,tibble)
 importFrom(utils,URLdecode)
 importFrom(utils,URLencode)
 importFrom(utils,adist)
