--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: webchem
 Title: Chemical Information from the Web
-Description: Chemical information from around the web. This package interacts
-    with a suite of web APIs for chemical information.
+Description: Chemical information from around the web. This package interacts 
+with a suite of web services for chemical information. Source include: Alan
+Wood's Compendium of Pesticide Common Names, Chemical Identifier Resolver,
+ChEBI, Chemical Translation Service, ChemIDplus, ChemSpider, ETOX, Flavornet,
+NIST Chemistry WebBook, OPSIN, PAN Pesticide Database, PubChem, SRS, Wikidata.  
 Type: Package
-Version: 0.5.0.9001
-Date: 2020-02-29
+Version: 1.0.0
+Date: 2020-05-27
 License: MIT + file LICENSE
 URL: https://docs.ropensci.org/webchem, https://github.com/ropensci/webchem
 BugReports: https://github.com/ropensci/webchem/issues
