added check_coverage() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(aw_query)
 export(build_aw_idx)
 export(cas)
 export(chebi_comp_entity)
+export(check_coverage)
 export(ci_query)
 export(cid_compinfo)
 export(cir)
