--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ export(srs_query)
 export(wd_ident)
 import(RCurl)
 import(dplyr)
+import(ggplot2)
 import(httr)
 import(jsonlite)
 import(rvest)
@@ -111,6 +112,8 @@ importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
+importFrom(rlang,as_function)
+importFrom(rlang,fn_fmls)
 importFrom(rvest,html_table)
 importFrom(stats,rexp)
 importFrom(stats,rgamma)
