changed function name from check_coverage to has_entry

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,6 @@ export(aw_query)
 export(build_aw_idx)
 export(cas)
 export(chebi_comp_entity)
-export(check_coverage)
 export(ci_query)
 export(cid_compinfo)
 export(cir)
@@ -61,6 +60,7 @@ export(get_cid)
 export(get_csid)
 export(get_etoxid)
 export(get_wdid)
+export(has_entry)
 export(inchikey)
 export(is.cas)
 export(is.inchikey)
