changed function name from has_entry to find_db.  Other minor changes to appease check()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,13 +53,13 @@ export(cts_to)
 export(etox_basic)
 export(etox_targets)
 export(etox_tests)
+export(find_db)
 export(fn_percept)
 export(get_chebiid)
 export(get_cid)
 export(get_csid)
 export(get_etoxid)
 export(get_wdid)
-export(has_entry)
 export(inchikey)
 export(is.cas)
 export(is.inchikey)
