Add RETRY, update verbose messages for alanwood, make build_aw_idx() internal

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,6 @@ S3method(smiles,pc_prop)
 S3method(smiles,wd_ident)
 export(as.cas)
 export(aw_query)
-export(build_aw_idx)
 export(cas)
 export(chebi_comp_entity)
 export(ci_query)
@@ -99,6 +98,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,select)
 importFrom(httr,GET)
 importFrom(httr,POST)
+importFrom(httr,RETRY)
 importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(httr,http_status)
