added cir_img() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(chebi_comp_entity)
 export(ci_query)
 export(cid_compinfo)
 export(cir)
+export(cir_img)
 export(cir_query)
 export(cs_check_key)
 export(cs_compinfo)
