adding webtest_query()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ export(ppdb_query)
 export(smiles)
 export(srs_query)
 export(wd_ident)
+export(webtest_query)
 import(dplyr)
 import(httr)
 import(jsonlite)
@@ -103,6 +104,7 @@ importFrom(purrr,map_dfr)
 importFrom(rlang,as_function)
 importFrom(rlang,fn_fmls)
 importFrom(rvest,html_table)
+importFrom(stats,rgamma)
 importFrom(stringr,str_trunc)
 importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
