--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: r
 r:
   - devel
   - release
-dist: focal
+dist: trusty
 sudo: required
 cache: packages
 env:
@@ -19,7 +19,6 @@ apt_packages:
   - libxml2-dev
   - default-jre
   - default-jdk
-  - r-cran-rjava
 
 r_packages:
   - devtools
