--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,14 @@ apt_packages:
   - libssl-dev
   - libcurl4-openssl-dev
   - libxml2-dev
-  - openjdk-11-jre
-  - openjdk-11-jdk
-  - r-cran-rjava
+  - default-jdk
+  - default-jre
+
+before_install:
+ - export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64/jre
+ - export PATH=$PATH:$JAVA_HOME/bin
+ - export LD_LIBRARY_PATH=/usr/lib/jvm/java-11-oracle/lib/amd64:/usr/lib/jvm/java-11-oracle/jre/lib/amd64/server
+ - sudo R CMD javareconf 
 
 r_packages:
   - devtools
