--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
  - export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64/jre
  - export PATH=$PATH:$JAVA_HOME/bin
  - export LD_LIBRARY_PATH=/usr/lib/jvm/java-11-oracle/lib/amd64:/usr/lib/jvm/java-11-oracle/jre/lib/amd64/server
- - sudo R CMD javareconf 
+ - sudo R CMD javareconf -e
 
 r_packages:
   - devtools
