Return to original Travis setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: r
 r:
   - devel
   - release
-dist: focal
+dist: trusty
 sudo: required
 cache: packages
 env:
@@ -17,14 +17,8 @@ apt_packages:
   - libssl-dev
   - libcurl4-openssl-dev
   - libxml2-dev
-  - default-jdk
   - default-jre
-
-before_install:
- - export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64/jre
- - export PATH=$PATH:$JAVA_HOME/bin
- - export LD_LIBRARY_PATH=/usr/lib/jvm/java-11-oracle/lib/amd64:/usr/lib/jvm/java-11-oracle/jre/lib/amd64/server
- - sudo R CMD javareconf -e
+  - default-jdk
 
 r_packages:
   - devtools
