now this should work

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -9,7 +9,7 @@ on:
     branches:
       - master
 
-name: R-CMD-check
+name: R-CMD-check-tests
 
 jobs:
   R-CMD-check:
@@ -25,13 +25,12 @@ jobs:
         shell: Rscript {0}
 
       - name: Check
+        env:
+          _R_CHECK_CRAN_INCOMING_: false
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error", check_dir = "check")
         shell: Rscript {0}
-        env:
-          CI: true
-          _R_CHECK_CRAN_INCOMING: false
 
       - name: Show testthat output
         if: always()
-        run: find check -name 'testthat.Rout*' -exec cat `{}` \; || true
+        run: find check -name 'testthat.Rout*' -exec cat '{}' \; || true
         shell: bash
