remove CI services other than github actions.  Switch github actions to only  master branch (testing done).

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -4,12 +4,11 @@ on:
   push:
     branches:
       - master
-      - pkgdown
   pull_request:
     branches:
       - master
 
-name: R-CMD-check-standard
+name: R-CMD-check
 
 jobs:
   R-CMD-check:
