add @import stringr::str_trunc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,6 +117,7 @@ importFrom(rvest,html_table)
 importFrom(stats,rexp)
 importFrom(stats,rgamma)
 importFrom(stats,setNames)
+importFrom(stringr,str_trunc)
 importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
 importFrom(tibble,tibble)
