--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,6 +50,7 @@ Suggests:
     knitr,
     rmarkdown,
     plot.matrix,
-    usethis
+    usethis,
+    vcr
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
