--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ S3method(smiles,pc_prop)
 S3method(smiles,wd_ident)
 export(as.cas)
 export(aw_query)
+export(bcpc_query)
 export(cas)
 export(chebi_comp_entity)
 export(ci_query)
