--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(aw_query)
 export(bcpc_query)
 export(cas)
 export(chebi_comp_entity)
+export(chembl_query)
 export(ci_query)
 export(cid_compinfo)
 export(cir)
@@ -102,6 +103,7 @@ importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
+importFrom(rlang,":=")
 importFrom(rlang,as_function)
 importFrom(rlang,fn_fmls)
 importFrom(rvest,html_table)
