Update function documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(bcpc_query)
 export(cas)
 export(chebi_comp_entity)
 export(chembl_query)
+export(chembl_resources)
 export(ci_query)
 export(cid_compinfo)
 export(cir)
