Add input validation, error handling, verbose messages and cache option

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,9 @@ importFrom(data.tree,as.Node)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
 importFrom(dplyr,select)
+importFrom(httr,RETRY)
+importFrom(httr,content)
+importFrom(httr,message_for_status)
 importFrom(jsonlite,fromJSON)
 importFrom(methods,is)
 importFrom(purrr,map)
