--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,11 +30,11 @@ S3method(smiles,pan_query)
 S3method(smiles,pc_prop)
 S3method(smiles,wd_ident)
 export(as.cas)
-export(atc_classes)
 export(aw_query)
 export(bcpc_query)
 export(cas)
 export(chebi_comp_entity)
+export(chembl_atc_classes)
 export(chembl_query)
 export(chembl_resources)
 export(ci_query)
