--- a/.github/workflows/check-pkgdown.yml
+++ b/.github/workflows/check-pkgdown.yml
@@ -11,6 +11,10 @@ name: check-pkgdown
 jobs:
     check_pkgdown:
       runs-on: ubuntu-22.04
+      
+      env:
+        GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      
       steps:
         - uses: actions/checkout@v3
         - uses: r-lib/actions/setup-r@v2
