Defunct pan_query()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ S3method(cas,cts_compinfo)
 S3method(cas,default)
 S3method(cas,etox_basic)
 S3method(cas,opsin_query)
-S3method(cas,pan_query)
 S3method(cas,wd_ident)
 S3method(inchikey,bcpc_query)
 S3method(inchikey,chebi_comp_entity)
@@ -14,7 +13,6 @@ S3method(inchikey,cts_compinfo)
 S3method(inchikey,default)
 S3method(inchikey,etox_basic)
 S3method(inchikey,opsin_query)
-S3method(inchikey,pan_query)
 S3method(inchikey,pc_prop)
 S3method(inchikey,wd_ident)
 S3method(smiles,bcpc_query)
@@ -23,7 +21,6 @@ S3method(smiles,cts_compinfo)
 S3method(smiles,default)
 S3method(smiles,etox_basic)
 S3method(smiles,opsin_query)
-S3method(smiles,pan_query)
 S3method(smiles,pc_prop)
 S3method(smiles,wd_ident)
 export(as.cas)
@@ -34,6 +31,7 @@ export(chebi_comp_entity)
 export(chembl_atc_classes)
 export(chembl_query)
 export(chembl_resources)
+export(ci_query)
 export(cid_compinfo)
 export(cir)
 export(cir_img)
@@ -115,7 +113,6 @@ importFrom(tibble,enframe)
 importFrom(tibble,tibble)
 importFrom(utils,URLdecode)
 importFrom(utils,URLencode)
-importFrom(utils,adist)
 importFrom(utils,globalVariables)
 importFrom(utils,menu)
 importFrom(utils,read.table)
