--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Description: Chemical information from around the web. This package interacts
     with a suite of web services for chemical information. Sources include: Alan
     Wood's Compendium of Pesticide Common Names, Chemical Identifier Resolver,
     ChEBI, Chemical Translation Service, ChemSpider, ETOX, Flavornet,
-    NIST Chemistry WebBook, OPSIN, PAN Pesticide Database, PubChem, SRS,
-    Wikidata.
+    NIST Chemistry WebBook, OPSIN, PubChem, SRS, Wikidata.
 Type: Package
 Version: 1.3.0
 License: MIT + file LICENSE
