--- a/.github/workflows/check-api-stability.yaml
+++ b/.github/workflows/check-api-stability.yaml
@@ -7,7 +7,7 @@ on:
   pull_request:
     branches: [main, master]
   schedule:
-    cron: "0 12 * * 0"
+    - cron: "0 12 * * 0"
 
 name: Run tests without {vcr}
 
