--- a/.github/workflows/check-api-stability.yaml
+++ b/.github/workflows/check-api-stability.yaml
@@ -25,11 +25,12 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-
+#TODO: don't need to run full check() here.  Probably only test() is fine
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::testthat
+          extra-packages: any::rcmdcheck
+          needs: check
 
-      - name: run tests
-        run: |
-          testthat::test_local()
+      - uses: r-lib/actions/check-r-package@v2
+        with:
+          upload-snapshots: true
