--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,8 +50,8 @@ Suggests:
     rmarkdown,
     plot.matrix,
     usethis,
-    vcr
-RoxygenNote: 7.2.3
+    vcr (>= 0.6.0)
+RoxygenNote: 7.3.2
 VignetteBuilder: knitr
 Config/testthat/edition: 3
 Config/testthat/parallel: true
