--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(cts_compinfo)
 export(cts_convert)
 export(cts_from)
 export(cts_to)
+export(db_download_chembl)
 export(etox_basic)
 export(etox_targets)
 export(etox_tests)
