Add new function chembl_status()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(chembl_atc_classes)
 export(chembl_img)
 export(chembl_query)
 export(chembl_resources)
+export(chembl_status)
 export(ci_query)
 export(cid_compinfo)
 export(cir)
