Fix variable scopes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ importFrom(purrr,map2)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(rlang,":=")
+importFrom(rlang,.data)
 importFrom(rlang,as_function)
 importFrom(rlang,fn_fmls)
 importFrom(rvest,html_table)
