Add chembl_status() to pkgdown yaml

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -55,6 +55,7 @@ reference:
   - ping_service
   - cs_datasources
   - chembl_atc_classes
+  - chembl_status
   - chembl_resources
   - parse_mol
   - write_mol
